# AKArt

./: CMakeLists.txt  LICENSE  partitions.csv
main/: ASSETS_A_FOURNIR.txt  CMakeLists.txt  app_main.cpp  track_editor.html
main/assets/gfx/: decor_barrier.cpp  decor_barrier.h  decor_bonus_boost.cpp  decor_bonus_boost.h  decor_bonus_shield.cpp  decor_bonus_shield.h  decor_bonus_shock.cpp  decor_bonus_shock.h  decor_cactus1.cpp  decor_cactus1.h  decor_cactus2.cpp  decor_cactus2.h  decor_cactus3.cpp  decor_cactus3.h  decor_finish_gate.cpp  decor_finish_gate.h  decor_fire.cpp  decor_fire.h  decor_flag.cpp  decor_flag.h  decor_house.cpp  decor_house.h  decor_oil_slick.cpp  decor_oil_slick.h  decor_palm.cpp  decor_palm.h  decor_rock.cpp  decor_rock.h  decor_sign_left.cpp  decor_sign_left.h  decor_sign_right.cpp  decor_sign_right.h  decor_sky_bg.cpp  decor_sky_bg.h  decor_sky_bg_city.cpp  decor_sky_bg_city.h  decor_sky_bg_desert.cpp  decor_sky_bg_desert.h  decor_start_gate.cpp  decor_start_gate.h  (+28 more)
main/assets/music/: jingle_finish.cpp  jingle_finish.h  jingle_lastlap.cpp  jingle_lastlap.h  music_city.cpp  music_city.h  music_desert.cpp  music_desert.h  music_hills.cpp  music_hills.h  music_results.cpp  music_results.h  music_title.cpp  music_title.h
main/assets_data/: kart_bleu_data.cpp  kart_bleu_data.h  kart_jaune_data.cpp  kart_jaune_data.h  kart_rouge_data.cpp  kart_rouge_data.h  kart_vert_data.cpp  kart_vert_data.h
main/core/: audio.cpp  audio.h  graphics.cpp  graphics.h  input.cpp  input.h  kart_loader.cpp  kart_loader.h  kart_sprites.h  sprites.cpp  sprites.h
main/game/: kart_engine.cpp  kart_engine.h  kart_game.cpp  kart_game.h  kart_render.cpp  kart_render.h  kart_types.h  music_registry.h  pause_menu.cpp  pause_menu.h  sprite_viewer.cpp  sprite_viewer.h  title_screen.cpp  title_screen.h  track_example.h  track_registry.h
main/game/tracks/: track_desert_01.h
main/tasks/: task_kart.cpp  task_kart.h
main/tools/: pmf_to_c.py
